tests/errors/untyped_argument.vrv
fn foo(s: string) -> void {}

foo(bar)
